# hw3-cg2017b

./: .clang-format  .gitignore  CMakeLists.txt  run.sh  rund.sh  xcode.sh
src/: pathtrace.cpp  stb_image_write.h  yocto_gl.h
